[gd_scene load_steps=8 format=1]

[ext_resource path="res://assets/prefabs/scripts/level.gd" type="Script" id=1]
[ext_resource path="res://assets/prefabs/bg.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/prefabs/player.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/sounds/effects/weapon-plasma.wav" type="Sample" id=4]
[ext_resource path="res://assets/sounds/effects/explosion-phaser.wav" type="Sample" id=5]

[sub_resource type="SampleLibrary" id=1]

samples/weapon = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 4 )
}

[sub_resource type="SampleLibrary" id=2]

samples/explosion = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 5 )
}

[node name="level" type="Node2D"]

script/script = ExtResource( 1 )

[node name="bg" parent="." instance=ExtResource( 2 )]

transform/pos = Vector2( 534, -144 )

[node name="player" parent="." instance=ExtResource( 3 )]

transform/pos = Vector2( 522.577, 554.386 )
transform/scale = Vector2( 0.3, 0.3 )

[node name="shoot_timer" type="Timer" parent="."]

process_mode = 1
wait_time = 0.2
one_shot = false
autostart = true

[node name="SamplePlayer2D" type="SamplePlayer2D" parent="."]

params/volume_db = 0.0
params/pitch_scale = 1.0
params/attenuation/min_distance = 1.0
params/attenuation/max_distance = 2048.0
params/attenuation/distance_exp = 1.0
config/polyphony = 1
config/samples = SubResource( 1 )
config/pitch_random = 0.0

[node name="spawn_timer" type="Timer" parent="."]

process_mode = 1
wait_time = 0.8
one_shot = false
autostart = true

[node name="SamplePlayer2D 2" type="SamplePlayer2D" parent="."]

params/volume_db = 0.0
params/pitch_scale = 1.0
params/attenuation/min_distance = 1.0
params/attenuation/max_distance = 2048.0
params/attenuation/distance_exp = 1.0
config/polyphony = 1
config/samples = SubResource( 2 )
config/pitch_random = 0.0

[connection signal="timeout" from="shoot_timer" to="." method="_on_shoot_timer_timeout"]

[connection signal="timeout" from="spawn_timer" to="." method="_on_spawn_timer_timeout"]


